--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+Last updated on 09/12/2020.
 <!-- end custom footer snippets -->
