--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 Last updated on 12/21/2020. 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+<span id="busuanzi_container_site_pv">Visit <span id="busuanzi_value_site_pv"></span> times</span>
 <!-- end custom footer snippets -->
