--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,2 +1,2 @@
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=6oKT70Jy08qPF_EXR7PXexVX1X5I8S5uiTIntTb87ic'></script>
+<script type='text/javascript' id='clustrmaps' width='150' height = '30' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=6oKT70Jy08qPF_EXR7PXexVX1X5I8S5uiTIntTb87ic'></script>
 
