--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,2 +1,7 @@
-
+<!-- start custom footer snippets -->
+Last updated on 03/13/2021. 
+<!-- end custom footer snippets -->
+<!-- <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span> reads</span>
+-->
 
